tests/compile_errors/003-unresolved-placeholders.buzz
| `joe` is not defined
import "lib/std";
import "tests/compile_errors/utils/bad-import";

test "Unknown string interpolated expression" {
    int hello = 12 + world;

    int by = hello + shey;

    print("{by}");
}

int shey = 42 + joe;